--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iLanding Bootstrap Template</title>
+  <title>DataSafe</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -44,13 +44,13 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">iLanding</h1>
+        <h1 class="sitename">DataSafe</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#hero" class="active">Início</a></li>
+          <li><a href="#about">Sobre</a></li>
           <li><a href="#features">Features</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#pricing">Pricing</a></li>
@@ -93,33 +93,32 @@
             <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
               <div class="company-badge mb-4">
                 <i class="bi bi-gear-fill me-2"></i>
-                Working for your success
+                Trabalhando para seu sucesso!
               </div>
 
               <h1 class="mb-4">
-                Maecenas Vitae <br>
-                Consectetur Led <br>
-                <span class="accent-text">Vestibulum Ante</span>
+                DataSafe<br>
+                <span class="accent-text">Segurança em cada byte.</span>
               </h1>
 
               <p class="mb-4 mb-md-5">
-                Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
-                Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+                Soluções em banco de dados, cloud, hospedagem e segurança, com alta performance e 
+                confiabilidade para o crescimento do seu negócio.
               </p>
 
               <div class="hero-buttons">
-                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Get Started</a>
-                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn btn-link mt-2 mt-sm-0 glightbox">
+                <a href="#about" class="btn btn-primary me-0 me-sm-2 mx-1">Saiba mais</a>
+                <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="btn btn-link mt-2 mt-sm-0 glightbox">
                   <i class="bi bi-play-circle me-1"></i>
                   Play Video
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="hero-image" data-aos="zoom-out" data-aos-delay="300">
-              <img src="assets/img/illustration-1.webp" alt="Hero Image" class="img-fluid">
+              <img src="assets/img/img_inicio.png" alt="Hero Image" class="img-fluid">
 
               <div class="customers-badge">
                 <div class="customer-avatars">
@@ -128,9 +127,9 @@
                   <img src="assets/img/avatar-3.webp" alt="Customer 3" class="avatar">
                   <img src="assets/img/avatar-4.webp" alt="Customer 4" class="avatar">
                   <img src="assets/img/avatar-5.webp" alt="Customer 5" class="avatar">
-                  <span class="avatar more">12+</span>
+                  <span class="avatar more">+</span>
                 </div>
-                <p class="mb-0 mt-2">12,000+ lorem ipsum dolor sit amet consectetur adipiscing elit</p>
+                <p class="mb-0 mt-2">Milhares de clientes satisfeitos!</p>
               </div>
             </div>
           </div>
@@ -143,8 +142,8 @@
                 <i class="bi bi-trophy"></i>
               </div>
               <div class="stat-content">
-                <h4>3x Won Awards</h4>
-                <p class="mb-0">Vestibulum ante ipsum</p>
+                <h4>99.99%</h4>
+                <p class="mb-0">Uptime garantido</p>
               </div>
             </div>
           </div>
@@ -154,8 +153,8 @@
                 <i class="bi bi-briefcase"></i>
               </div>
               <div class="stat-content">
-                <h4>6.5k Faucibus</h4>
-                <p class="mb-0">Nullam quis ante</p>
+                <h4>+500 TB</h4>
+                <p class="mb-0">Armazenamento em nuvem</p>
               </div>
             </div>
           </div>
@@ -165,8 +164,8 @@
                 <i class="bi bi-graph-up"></i>
               </div>
               <div class="stat-content">
-                <h4>80k Mauris</h4>
-                <p class="mb-0">Etiam sit amet orci</p>
+                <h4>10k</h4>
+                <p class="mb-0">Websites hospedados</p>
               </div>
             </div>
           </div>
@@ -176,8 +175,8 @@
                 <i class="bi bi-award"></i>
               </div>
               <div class="stat-content">
-                <h4>6x Phasellus</h4>
-                <p class="mb-0">Vestibulum ante ipsum</p>
+                <h4>ISO 27001</h4>
+                <p class="mb-0">Certificado de segurança</p>
               </div>
             </div>
           </div>
@@ -195,35 +194,35 @@
         <div class="row gy-4 align-items-center justify-content-between">
 
           <div class="col-xl-5" data-aos="fade-up" data-aos-delay="200">
-            <span class="about-meta">MORE ABOUT US</span>
-            <h2 class="about-title">Voluptas enim suscipit temporibus</h2>
-            <p class="about-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+            <span class="about-meta">SOBRE NÓS</span>
+            <h2 class="about-title">Protegendo seus dados com segurança e confiança</h2>
+            <p class="about-description">A DataSafe nasceu com a missão de oferecer soluções seguras e eficientes em armazenamento, hospedagem e proteção digital. Com anos de experiência, crescemos junto aos nossos clientes, garantindo tecnologia de ponta, alto desempenho e total confiabilidade para empresas de todos os portes.</p>
 
             <div class="row feature-list-wrapper">
               <div class="col-md-6">
                 <ul class="feature-list">
-                  <li><i class="bi bi-check-circle-fill"></i> Lorem ipsum dolor sit amet</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Consectetur adipiscing elit</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Sed do eiusmod tempor</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Profissionais em cloud</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Hospedagem segura</li>
+                  <li><i class="bi bi-check-circle-fill"></i> Sistemas confiáveis</li>
                 </ul>
               </div>
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <ul class="feature-list">
                   <li><i class="bi bi-check-circle-fill"></i> Incididunt ut labore et</li>
                   <li><i class="bi bi-check-circle-fill"></i> Dolore magna aliqua</li>
                   <li><i class="bi bi-check-circle-fill"></i> Ut enim ad minim veniam</li>
                 </ul>
-              </div>
+              </div> -->
             </div>
 
             <div class="info-wrapper">
               <div class="row gy-4">
                 <div class="col-lg-5">
                   <div class="profile d-flex align-items-center gap-3">
-                    <img src="assets/img/avatar-1.webp" alt="CEO Profile" class="profile-image">
+                    <img src="assets/img/logo-sem-escrita.png" alt="CEO Profile" class="profile-image">
                     <div>
-                      <h4 class="profile-name">Mario Smith</h4>
-                      <p class="profile-position">CEO &amp; Founder</p>
+                      <h4 class="profile-name">DataSafe</h4>
+                      <!-- <p class="profile-position">CEO & Founder</p> -->
                     </div>
                   </div>
                 </div>
@@ -231,7 +230,7 @@
                   <div class="contact-info d-flex align-items-center gap-2">
                     <i class="bi bi-telephone-fill"></i>
                     <div>
-                      <p class="contact-label">Call us anytime</p>
+                      <p class="contact-label">Fale conosco</p>
                       <p class="contact-number">+123 456-789</p>
                     </div>
                   </div>
@@ -243,12 +242,12 @@
           <div class="col-xl-6" data-aos="fade-up" data-aos-delay="300">
             <div class="image-wrapper">
               <div class="images position-relative" data-aos="zoom-out" data-aos-delay="400">
-                <img src="assets/img/about-5.webp" alt="Business Meeting" class="img-fluid main-image rounded-4">
-                <img src="assets/img/about-2.webp" alt="Team Discussion" class="img-fluid small-image rounded-4">
+                <img src="assets/img/img_sobre1.jpg" alt="Business Meeting" class="img-fluid main-image rounded-4">
+                <img src="assets/img/img_sobre2.jpg" alt="Team Discussion" class="img-fluid small-image rounded-4">
               </div>
               <div class="experience-badge floating">
-                <h3>15+ <span>Years</span></h3>
-                <p>Of experience in business service</p>
+                <h3>15+ <span>anos</span></h3>
+                <p>de experiência no mercado</p>
               </div>
             </div>
           </div>
@@ -264,7 +263,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Features</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, nemo ab. Voluptatum amet, ex consectetur quis placeat corporis aperiam nihil in optio quod tempore dolores quas, totam voluptate, repellendus ipsa.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -275,19 +274,19 @@
 
             <li class="nav-item">
               <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#features-tab-1">
-                <h4>Modisit</h4>
+                <h4>Cloud</h4>
               </a>
             </li><!-- End tab nav item -->
 
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-2">
-                <h4>Praesenti</h4>
+                <h4>Hospedagem</h4>
               </a><!-- End tab nav item -->
 
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="tab" data-bs-target="#features-tab-3">
-                <h4>Explica</h4>
+                <h4>Segurança</h4>
               </a>
             </li><!-- End tab nav item -->
 
