app-depoimentos-footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a href="#hero" class="active">Início</a></li>
           <li><a href="#about">Sobre</a></li>
-          <li><a href="#features">Features</a></li>
+          <li><a href="#features">Serviços</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -262,7 +262,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Features</h2> <!-- nao sei que nome colocar -->
+        <h2>Serviços</h2> <!-- nao sei que nome colocar -->
         <p>A DataSafe oferece uma plataforma completa para armazenamento, escalabilidade e segurança. Nossos serviços garantem alta performance e facilidade de integração, permitindo que você desenvolva, hospede e proteja suas aplicações com total eficiência.</p>
       </div><!-- End Section Title -->
 
@@ -411,11 +411,11 @@
             <div class="feature-item text-end mb-5" data-aos="fade-right" data-aos-delay="200">
               <div class="d-flex align-items-center justify-content-end gap-4">
                 <div class="feature-content">
-                  <h3>Use On Any Device</h3>
-                  <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</p>
+                  <h3>Use nosso aplicativo</h3>
+                  <p>Desenvolvido com o objetivo de facilitar o gerenciamento de seus arquivos.</p>
                 </div>
                 <div class="feature-icon flex-shrink-0">
-                  <i class="bi bi-display"></i>
+                  <i class="bi bi-phone"></i>
                 </div>
               </div>
             </div><!-- End .feature-item -->
@@ -423,8 +423,8 @@
             <div class="feature-item text-end mb-5" data-aos="fade-right" data-aos-delay="300">
               <div class="d-flex align-items-center justify-content-end gap-4">
                 <div class="feature-content">
-                  <h3>Feather Icons</h3>
-                  <p>Phasellus ullamcorper ipsum rutrum nunc nunc nonummy metus vestibulum volutpat sapien arcu sed augue aliquam erat volutpat.</p>
+                  <h3>Edite seus arquivos</h3>
+                  <p>Nosso aplicativo permite a edição de arquivos a qualquer momento.</p>
                 </div>
                 <div class="feature-icon flex-shrink-0">
                   <i class="bi bi-feather"></i>
@@ -435,8 +435,8 @@
             <div class="feature-item text-end" data-aos="fade-right" data-aos-delay="400">
               <div class="d-flex align-items-center justify-content-end gap-4">
                 <div class="feature-content">
-                  <h3>Retina Ready</h3>
-                  <p>Aenean tellus metus bibendum sed posuere ac mattis non nunc vestibulum fringilla purus sit amet fermentum aenean commodo.</p>
+                  <h3>Gerencie de modo fácil</h3>
+                  <p>Oferecemos modos fáceis e rápidos para gerenciar sua nuvem.</p>
                 </div>
                 <div class="feature-icon flex-shrink-0">
                   <i class="bi bi-eye"></i>
@@ -469,7 +469,7 @@
             <div class="feature-item mb-5" data-aos="fade-left" data-aos-delay="300">
               <div class="d-flex align-items-center gap-4">
                 <div class="feature-icon flex-shrink-0">
-                  <i class="bi bi-phone"></i>
+                  <i class="bi bi-display"></i>
                 </div>
                 <div class="feature-content">
                   <h3>Fully Responsive</h3>
@@ -504,9 +504,9 @@
 
         <div class="row content justify-content-center align-items-center position-relative">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="display-4 mb-4">Maecenas tempus tellus eget condimentum</h2>
-            <p class="mb-4">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel</p>
-            <a href="#" class="btn btn-cta">Call To Action</a>
+            <h2 class="display-4 mb-4">Baixe nosso aplicativo agora mesmo!</h2>
+            <p class="mb-4">Garanta uma maneira fácil e rápida para gerenciar seus projetos e arquivos!</p>
+            <a href="#" class="btn btn-cta">Baixar</a>
           </div>
 
           <!-- Abstract Background Elements -->
@@ -613,8 +613,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Depoimentos</h2>
+        <p>Leia algumas avaliações sobre nossos sistemas.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -624,14 +624,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+              <h3>Lucas Ferreira</h3>
+              <h4>Desenvolvedor Full Stack</h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                <span>A DataSafe revolucionou minha forma de trabalhar! A facilidade para gerenciar meus projetos e a segurança oferecida são simplesmente incríveis. Sem dúvidas, é a melhor escolha para quem busca eficiência e controle total sobre suas aplicações.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -640,14 +640,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
+              <h3>Ana Souza</h3>
+              <h4>CTO de Startup</h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                <span>Encontramos na DataSafe a solução perfeita para escalar nossa startup. A infraestrutura é robusta, o suporte técnico sempre disponível, e os custos são muito mais previsíveis. Recomendo para qualquer empresa que precise de serviços confiáveis!</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -656,14 +656,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
+              <h3>Jena Lima</h3>
+              <h4>Analista de Dados</h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                <span>A integração de banco de dados da DataSafe é excepcional. Meu trabalho ficou muito mais ágil e seguro. Além disso, a interface intuitiva facilita o gerenciamento, mesmo para quem não é especialista em infraestrutura.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -672,14 +672,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
+              <h3>Carlos Brandon</h3>
+              <h4>Freelancer em Desenvolvimento Web</h4>
               <div class="stars">
                 <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
               </div>
               <p>
                 <i class="bi bi-quote quote-icon-left"></i>
-                <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                <span>Já testei várias plataformas, mas nenhuma me deu tanta liberdade e controle como a DataSafe. Hospedagem rápida, suporte incrível e um painel de administração muito bem construído. Vale cada centavo!</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
             </div>
@@ -700,29 +700,29 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Clients</p>
+              <span data-purecounter-start="0" data-purecounter-end="10000" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Clientes</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Projects</p>
+              <span data-purecounter-start="0" data-purecounter-end="879" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Projetos</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <span data-purecounter-start="0" data-purecounter-end="1253" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Horas de suporte</p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Workers</p>
+              <span data-purecounter-start="0" data-purecounter-end="63" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Funcionários</p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -1132,13 +1132,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">iLanding</span>
+            <span class="sitename">DataSafe</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>Rua xxx</p>
+            <p>Curitiba, Paraná</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>datasafe@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -1149,39 +1149,38 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Links úteis</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Termos de serviço</a></li>
+            <li><a href="#">Política e privacidade</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nossos serviços</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Cloud</a></li>
+            <li><a href="#">Hospedagem de websites</a></li>
+            <li><a href="#">Hospedagem de aplicativos</a></li>
+            <li><a href="#">Banco de dados</a></li>
+            <li><a href="#">Aplicativo para gerenciamento</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Criadores</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="#">Byanca Lourenço</a></li>
+            <li><a href="#">Gabriely Santos</a></li>
+            <li><a href="#">Nicole Modesto</a></li>
+            <li><a href="#">Vitore lopes</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
+        <!-- <div class="col-lg-2 col-md-3 footer-links">
           <h4>Nobis illum</h4>
           <ul>
             <li><a href="#">Ipsam</a></li>
@@ -1190,13 +1189,13 @@
             <li><a href="#">Trodelas</a></li>
             <li><a href="#">Flexo</a></li>
           </ul>
-        </div>
+        </div> -->
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">iLanding</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DataSafe</strong> <span>Todos os direitos reservados</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
