--- a/index.html
+++ b/index.html
@@ -49,34 +49,24 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Início</a></li>
+          <li><a href="#hero">Início</a></li>
           <li><a href="#about">Sobre</a></li>
           <li><a href="#features">Serviços</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#services"><span>Cursos</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li><a href="seguranca.html">Segurança da Informação</a></li>
+              <li><a href="banco.html">Banco de Dados e Armazenamento</a></li>
+              <li><a href="hospedagem.html">Hospedagem e Performance Web</a></li>
+              <li><a href="desenvolvimento.html">Desenvolvimento e Gerenciamento de Infraestrutura</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#pricing">Preços</a></li>
+          <li><a href="#contact">Contato</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+      <a class="btn-getstarted" href="index.html#about">Começar</a>
 
     </div>
   </header>
@@ -448,7 +438,7 @@
 
           <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="phone-mockup text-center">
-              <img src="assets/img/phone-app-screen.webp" alt="Phone Mockup" class="img-fluid">
+              <img src="assets/img/celular (1).png" alt="Phone Mockup" class="img-fluid">
             </div>
           </div><!-- End Phone Mockup -->
 
@@ -460,8 +450,8 @@
                   <i class="bi bi-code-square"></i>
                 </div>
                 <div class="feature-content">
-                  <h3>W3c Valid Code</h3>
-                  <p>Donec vitae sapien ut libero venenatis faucibus nullam quis ante etiam sit amet orci eget eros faucibus tincidunt.</p>
+                  <h3>Sistemas confiáveis</h3>
+                  <p>Não se preocupe! os sistemas feitos pela DataSafe são feitos atenciosamente e são confiáveis.</p>
                 </div>
               </div>
             </div><!-- End .feature-item -->
@@ -472,8 +462,8 @@
                   <i class="bi bi-display"></i>
                 </div>
                 <div class="feature-content">
-                  <h3>Fully Responsive</h3>
-                  <p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero sit amet adipiscing sem neque sed ipsum.</p>
+                  <h3>2 formas de acesso </h3>
+                  <p>Acesse tudo que precisar, pelo nosso website ou pelo app.</p>
                 </div>
               </div>
             </div><!-- End .feature-item -->
@@ -484,8 +474,8 @@
                   <i class="bi bi-browser-chrome"></i>
                 </div>
                 <div class="feature-content">
-                  <h3>Browser Compatibility</h3>
-                  <p>Nullam dictum felis eu pede mollis pretium integer tincidunt cras dapibus vivamus elementum semper nisi aenean vulputate.</p>
+                  <h3>Compatibilidade</h3>
+                  <p>Nosso app é compatível com IOS e Android!</p>
                 </div>
               </div>
             </div><!-- End .feature-item -->
@@ -504,9 +494,9 @@
 
         <div class="row content justify-content-center align-items-center position-relative">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="display-4 mb-4">Baixe nosso aplicativo agora mesmo!</h2>
-            <p class="mb-4">Garanta uma maneira fácil e rápida para gerenciar seus projetos e arquivos!</p>
-            <a href="#" class="btn btn-cta">Baixar</a>
+            <h2 class="display-4 mb-4">Gerencie seus arquivos pelo nosso website!</h2>
+            <p class="mb-4">Clique aqui para gerenciar seus projetos e arquivos guardados pela DataSafe!</p>
+            <a href="#" class="btn btn-cta">Gerenciar</a>
           </div>
 
           <!-- Abstract Background Elements -->
@@ -737,8 +727,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Cursos</h2>
+        <p>Nossa empresa também proporciona cursos gratuitos com certificado, para você que ainda está começando ou que deseja aprofundar seus conhecimentos em algumas áreas! Confira as opções.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -751,9 +741,9 @@
                 <i class="bi bi-activity"></i>
               </div>
               <div>
-                <h3>Nesciunt Mete</h3>
-                <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <h3>Segurança da Informação</h3>
+                <p>Aborda as melhores práticas para proteger aplicações e dados. Os alunos aprenderão a prevenir ataques cibernéticos, implementar criptografia, e aplicar estratégias de autenticação segura e gestão de acessos, garantindo a integridade e confidencialidade das informações.</p>
+                <a href="seguranca.html" class="read-more">Saiba mais <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -764,9 +754,9 @@
                 <i class="bi bi-diagram-3"></i>
               </div>
               <div>
-                <h3>Eosle Commodi</h3>
-                <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <h3>Banco de Dados e Armazenamento</h3>
+                <p>Ensina a configurar e otimizar bancos de dados SQL e NoSQL, melhorar consultas e implementar backups e recuperação de dados eficientes, garantindo segurança e performance.</p>
+                <a href="banco.html" class="read-more">Saiba mais <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -777,9 +767,9 @@
                 <i class="bi bi-easel"></i>
               </div>
               <div>
-                <h3>Ledo Markt</h3>
-                <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <h3>Hospedagem e Performance Web</h3>
+                <p>Ensina a configurar e otimizar bancos de dados SQL e NoSQL, melhorar consultas e implementar backups e recuperação de dados, focando na segurança e performance dos dados.</p>
+                <a href="hospedagem.html" class="read-more">Saiba mais <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
@@ -790,9 +780,9 @@
                 <i class="bi bi-clipboard-data"></i>
               </div>
               <div>
-                <h3>Asperiores Commodit</h3>
-                <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-                <a href="service-details.html" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+                <h3>Desenvolvimento e Gerenciamento de Infraestrutura</h3>
+                <p>Ensina a configurar e administrar ambientes de TI usando cloud computing e servidores Linux/Windows, com foco em segurança, automação e controle de custos. Ideal para quem busca gerenciar infraestrutura de forma eficiente e escalável.</p>
+                <a href="desenvolvimento.html" class="read-more">Saiba mais <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div><!-- End Service Card -->
