--- a/seguranca.html
+++ b/seguranca.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo-sem-escritaBranco.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -49,24 +49,24 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="index.html">Sobre</a></li>
-          <li><a href="index.html">Serviços</a></li>
-          <li class="dropdown"><a href="#"><span>Cursos</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="index.html#hero">Início</a></li>
+          <li><a href="index.html#about">Sobre</a></li>
+          <li><a href="index.html#features">Serviços</a></li>
+          <li class="dropdown"><a href="index.html#services"><span>Cursos</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Segurança da Informação</a></li>
-              <li><a href="#">Banco de Dados e Armazenamento</a></li>
-              <li><a href="#">Hospedagem e Performance Web</a></li>
-              <li><a href="#">Desenvolvimento e Gerenciamento de Infraestrutura</a></li>
+              <li><a href="seguranca.html">Segurança da Informação</a></li>
+              <li><a href="banco.html">Banco de Dados e Armazenamento</a></li>
+              <li><a href="hospedagem.html">Hospedagem e Performance Web</a></li>
+              <li><a href="desenvolvimento.html">Desenvolvimento e Gerenciamento de Infraestrutura</a></li>
             </ul>
           </li>
-          <li><a href="index.html">Preços</a></li>
-          <li><a href="index.html">Contato</a></li>
+          <li><a href="index.html#pricing">Preços</a></li>
+          <li><a href="index.html#contact">Contato</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="index.html#about">Começar</a>
+      <a class="btn-getstarted" href="index.html#pricing">Começar</a>
 
     </div>
   </header>
@@ -76,11 +76,11 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container">
-        <h1>Service Details</h1>
+        <h1>Segurança da Informação</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Service Details</li>
+            <li><a href="index.html#services">Cursos</a></li>
+            <li class="current">Segurança da Informação</li>
           </ol>
         </nav>
       </div>
@@ -96,50 +96,46 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
 
             <div class="service-box">
-              <h4>Serices List</h4>
+              <h4>Cursos</h4>
               <div class="services-list">
-                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Web Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Product Management</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Graphic Design</span></a>
-                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Marketing</span></a>
+                <a href="#" class="active"><i class="bi bi-arrow-right-circle"></i><span>Segurança da Informação</span></a>
+                <a href="banco.html"><i class="bi bi-arrow-right-circle"></i><span>Banco de Dados e Armazenamento</span></a>
+                <a href="hospedagem.html"><i class="bi bi-arrow-right-circle"></i><span>Hospedagem e Performance Web</span></a>
+                <a href="desenvolvimento.html"><i class="bi bi-arrow-right-circle"></i><span>Desenvolvimento e Gerenciamento de Infraestrutura</span></a>
               </div>
             </div><!-- End Services List -->
 
             <div class="service-box">
-              <h4>Download Catalog</h4>
+              <h4>Baixe os detalhes</h4>
               <div class="download-catalog">
-                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catalog PDF</span></a>
-                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catalog DOC</span></a>
+                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Baixar PDF</span></a>
+                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Baixar DOC</span></a>
               </div>
             </div><!-- End Services List -->
 
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
-              <h4>Have a Question?</h4>
+              <h4>Tem alguma dúvida?</h4>
               <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>+1 5589 55488 55</span></p>
-              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">contact@example.com</a></p>
+              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contact@example.com">datasafe@gmail.com</a></p>
             </div>
 
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/seguranca.png" alt="" class="img-fluid services-img">
+            <h3>O que você vai aprender?</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+                O curso de Segurança da Informação da DataSafe oferece uma abordagem completa para proteger dados e aplicações contra ameaças cibernéticas. Os alunos aprenderão a identificar e mitigar riscos de segurança, implementando práticas como a proteção contra SQL Injection, XSS, CSRF, entre outros tipos de ataques comuns na web. O curso também aborda conceitos fundamentais de criptografia, ensinando como proteger informações sensíveis, utilizar certificados digitais e implementar protocolos de segurança como TLS/SSL. Além disso, os participantes aprenderão a criar e gerenciar sistemas de autenticação segura, utilizando métodos como OAuth, JWT e autenticação multifator (MFA), para garantir que apenas usuários autorizados tenham acesso aos sistemas. O curso foca em criar uma base sólida para desenvolver e manter sistemas seguros, protegendo a integridade, confidencialidade e disponibilidade das informações em ambientes digitais cada vez mais complexos.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Fundamentos de Segurança na Web</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Criptografia e Proteção de Dados</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Gestão de Acessos e Autenticação</span></li>
             </ul>
-            <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
-            </p>
-            <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
+            <div class="services-list">
+                <a href="#"><i class="bi bi-arrow-right-circle"></i><span>Inscrever-se</span></a>
+              </div>
           </div>
 
         </div>
@@ -156,13 +152,13 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">iLanding</span>
+            <span class="sitename">DataSafe</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
+            <p>Rua xxx</p>
+            <p>Curitiba, Paraná</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>datasafe@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -173,39 +169,38 @@
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Links úteis</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Termos de serviço</a></li>
+            <li><a href="#">Política e privacidade</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nossos serviços</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Cloud</a></li>
+            <li><a href="#">Hospedagem de websites</a></li>
+            <li><a href="#">Hospedagem de aplicativos</a></li>
+            <li><a href="#">Banco de dados</a></li>
+            <li><a href="#">Aplicativo para gerenciamento</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
+          <h4>Criadores</h4>
           <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="#">Byanca Lourenço</a></li>
+            <li><a href="#">Gabriely Santos</a></li>
+            <li><a href="#">Nicole Modesto</a></li>
+            <li><a href="#">Vitore lopes</a></li>
           </ul>
         </div>
 
-        <div class="col-lg-2 col-md-3 footer-links">
+        <!-- <div class="col-lg-2 col-md-3 footer-links">
           <h4>Nobis illum</h4>
           <ul>
             <li><a href="#">Ipsam</a></li>
@@ -214,13 +209,13 @@
             <li><a href="#">Trodelas</a></li>
             <li><a href="#">Flexo</a></li>
           </ul>
-        </div>
+        </div> -->
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">iLanding</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">DataSafe</strong> <span>Todos os direitos reservados</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
