--- a/banco.html
+++ b/banco.html
@@ -196,7 +196,7 @@
             <li><a href="#">Byanca Lourenço</a></li>
             <li><a href="#">Gabriely Santos</a></li>
             <li><a href="#">Nicole Modesto</a></li>
-            <li><a href="#">Vitore lopes</a></li>
+            <li><a href="#">Vitor Lopes</a></li>
           </ul>
         </div>
 
